added script for hw4